--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,14 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 click==7.1.2
 colorama==0.4.6
+Django==4.2.4
 django-cors-headers==3.13.0
 django-extensions==3.2.1
 django-filter==22.1
 django-rest-framework==0.1.0
 django-tqdm==1.3.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
 exceptiongroup==1.1.1
 flake8==5.0.4
 Flask==1.1.2
@@ -34,9 +36,11 @@ packaging==23.1
 pathspec==0.10.1
 platformdirs==2.5.3
 pluggy==1.2.0
+psycopg2==2.9.7
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
+PyJWT==2.8.0
 PySocks==1.7.1
 pytest==7.4.0
 pytz==2022.7.1
